...
                        <viewControllerLayoutGuide type="bottom" id="qCR-en-mCe"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="TuP-Vc-7Kv">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add Task" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="TAO-nb-Q6a">
                                <rect key="frame" x="16" y="66" width="343" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="dlW-ae-Bfo"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
...
                                    <!--2017-07-18 16:49:31 +0000-->
                                </date>
                            </datePicker>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EPD-UR-jz6">
                                <rect key="frame" x="163" y="343" width="48" height="36"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="saveButtonTapped:" destination="nk3-7D-LKa" eventType="touchUpInside" id="Am7-9c-B0w"/>
                                    <segue destination="wAI-6q-e8G" kind="show" id="saL-Zf-wIQ"/>
                                </connections>
                            </button>
                        </subviews>
...
